# red-ai

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
lib/: red-ai-stack.ts
rust/chat_handler/: Cargo.toml  Makefile.toml
rust/chat_handler/src/: main.rs
rust/gpt_handler/: Cargo.toml  Makefile.toml
rust/gpt_handler/src/: main.rs
rust/openai_tts_handler/: Cargo.toml  Makefile.toml
rust/openai_tts_handler/src/: main.rs
rust/polly_handler/: Cargo.toml  Makefile.toml
rust/polly_handler/src/: main.rs
test/: red-ai.test.ts
