[package]
name = "chat_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.9" 
aws-sdk-dynamodb = "1.52.0" 
lambda_runtime = "0.13"  
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dotenv = "0.15"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
