[package]
name = "openai_tts_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.9" 
lambda_runtime = "0.13.0"  # Use the latest version
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
aws-sdk-s3 = "1.59.0"             # AWS SDK for S3
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12.9", features = ["json","native-tls-vendored"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
